# a2a-git

./: .gitignore  Dockerfile  README.md  pyproject.toml
.well-known/: agent.json
git_agent/: __main__.py  a2a_server.py  agent.py  git_task_manager.py
